# colorama-easy

./: README.md  pyproject.toml
coloramaeasy/: __init__.py
