[tool.poetry]
name = "colorama-easy"
packages = [{ include = "coloramaeasy" }]
version = "0.1.0"
description = ""
authors = ["xmonader <xmonader@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
